[package]
name = "openvpn-mfa"
version = "0.1.0"
edition = "2024"

[dependencies]
openvpn-mgmt-codec = "1.0.0-rc.4"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
clap = { version = "4.6.0", features = ["derive"] }
tracing = "0.1"
anyhow = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
